Settings UI: create page-not-available for history and bookmarks in guest-mode

Bug: 813451
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I45095ecfdf54ccbbd1a9b8fac5304f829faf2b55
Reviewed-on: https://chromium-review.googlesource.com/1014404
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551883}
Former-commit-id: 8948e4345bb7b09d205745074137daf4922af05f